feat: update project detail
